@@ -5,7 +5,7 @@
     <parent>
         <artifactId>rone</artifactId>
         <groupId>org.rone</groupId>
-        <version>1.0</version>
+        <version>1.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -14,16 +14,15 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <!--<profile>${env}</profile>-->
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.rone</groupId>
             <artifactId>rone-core</artifactId>
-            <version>1.0</version>
+            <version>1.0.0</version>
         </dependency>
-
-        <!-- springboot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -35,6 +34,30 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--    <artifactId>spring-boot-starter-jdbc</artifactId>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+        </dependency>
+        <!--<dependency>-->
+        <!--    <groupId>org.springframework.boot</groupId>-->
+        <!--    <artifactId>spring-boot-starter-jetty</artifactId>-->
+        <!--</dependency>-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
     </dependencies>
 
@@ -67,4 +90,39 @@
         </profile>
     </profiles>
 
+    <!-- spring boot 打包插件-->
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>org.rone.web.WebApplication</mainClass>
+                    <!--使用远程调试 请打开下行关闭下下行注释 -->
+                    <jvmArguments>-Xms256M -Xmx2048M -XX:MaxPermSize=512M
+                        -XX:+UseConcMarkSweepGC</jvmArguments>
+                    <executable>true</executable>
+                </configuration>
+            </plugin>
+            <!--&lt;!&ndash; jetty插件 &ndash;&gt;-->
+            <!--<plugin>-->
+            <!--    <groupId>org.mortbay.jetty</groupId>-->
+            <!--    <artifactId>maven-jetty-plugin</artifactId>-->
+            <!--    <version>6.1.26</version>-->
+            <!--    <configuration>-->
+            <!--        <webAppConfig>-->
+            <!--            <contextPath>/</contextPath>-->
+            <!--        </webAppConfig>-->
+            <!--        <connectors>-->
+            <!--            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">-->
+            <!--                <port>8083</port>-->
+            <!--            </connector>-->
+            <!--        </connectors>-->
+            <!--        <reload>automatic</reload>-->
+            <!--        &lt;!&ndash; <webAppSourceDirectory>${basedir}/src/main/webapp</webAppSourceDirectory> &ndash;&gt;-->
+            <!--    </configuration>-->
+            <!--</plugin>-->
+        </plugins>
+    </build>
 </project>
